<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/tv_listSuitsSuitCode"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/list_item_suit_code"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        />

    <TextView
        android:id="@+id/textView_listSuitsSuitCode"
        android:text="@string/list_item_suit_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_listSuitsSuitCode"
        android:textColor="@color/mygreen" />

    <TextView
        android:id="@+id/tv_listSuitsSuitCatalog"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/list_item_suit_catalog"
        android:layout_below="@id/textView_listSuitsSuitCode"
        />

    <TextView
        android:id="@+id/textView_listSuitsSuitCatalog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item_suit_catalog"
        android:textColor="@color/mywhite"
        android:layout_below="@+id/textView_listSuitsSuitCode"
        android:layout_toRightOf="@+id/tv_listSuitsSuitCatalog"
        />

    <TextView
        android:id="@+id/tv_listSuitsSuitPrice"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/list_item_suit_price"
        android:layout_below="@+id/textView_listSuitsSuitCatalog"
        />

    <TextView
        android:id="@+id/textView_listSuitsSuitPrice"
        android:text="@string/list_item_suit_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_listSuitsSuitCatalog"
        android:layout_toRightOf="@+id/tv_listSuitsSuitPrice"
        android:textColor="@color/myred" />

    <TextView
        android:id="@+id/tv_listSuitsSuitColorType"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/list_item_suit_colorType"
        android:layout_below="@+id/tv_listSuitsSuitPrice"
        />

    <TextView
        android:id="@+id/textView_listSuitsSuitColorType"
        android:text="@string/list_item_suit_colorType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_listSuitsSuitPrice"
        android:layout_toRightOf="@+id/tv_listSuitsSuitColorType"
        />

    <TextView
        android:id="@+id/tv_listSuitsSuitDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item_suit_description"
        android:textColor="@color/myorange"
        android:layout_below="@+id/tv_listSuitsSuitColorType"
        />

    <TextView
        android:id="@+id/textView_listSuitsSuitDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_listSuitsSuitDescription"
        android:text="@string/list_item_suit_description"
        android:textColor="@color/mywhite"
        android:layout_marginBottom="16dp"
        />

</RelativeLayout>

