<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activity">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/akms"
        android:id="@+id/imageView_dashboard_akms_logo"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/imageView_dashboard_akms_logo"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:id="@+id/textView_profileUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textColor="@color/mygreen" />

        <Button
            android:id="@+id/button_tailors"
            android:text="@string/btn_tailors"
            android:layout_below="@+id/textView_profileUser"
            style="@style/MyButton.BloodRed"
            />

        <Button
            android:id="@+id/button_orders"
            android:text="@string/btn_orders"
            android:layout_below="@+id/button_tailors"
            style="@style/MyButton.BloodRed"
            />

        <Button
            android:id="@+id/button_suits"
            android:text="@string/btn_suits"
            android:layout_below="@+id/button_orders"
            style="@style/MyButton.BloodRed"
             />

        <Button
            android:id="@+id/button_merchandise"
            android:text="@string/btn_merc"
            android:layout_below="@+id/button_items"
            style="@style/MyButton.BloodRed"
            />

        <TextView
            android:id="@+id/textView_activity_app_version"
            android:gravity="center_horizontal"
            android:textColor="@color/mygreen"
            android:text="Version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</RelativeLayout>
